fix overflow in main tag

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,6 @@ main {
 	left: 300px;
 	right: 0; 
 	text-align: center;
-	overflow: scroll;
 	z-index: -1;
 }
 
